--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~50.0.5",
     "expo-camera": "~14.1.1",
     "expo-font": "~11.10.2",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.1",
     "expo-location": "~16.5.5",
     "expo-media-library": "~15.9.2",
@@ -32,8 +33,7 @@
     "react-native": "0.73.2",
     "react-native-maps": "1.10.0",
     "react-native-maps-directions": "^1.9.0",
-    "styled-components": "^6.1.8",
-    "expo-image-picker": "~14.7.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
