--- a/app.json
+++ b/app.json
@@ -27,7 +27,15 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow VitalHub to access your camera",
+          "microphonePermission": "Allow VitalHub to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
     ]
   }
 }
