--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.74.1",
     "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
